# SVPN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  avproto.c  avproto.h  build.sh  svpn-defs.h  svpn_common.c  svpn_defs.h  svpn_utils.c  utility_routines.c  utility_routines.h
client/: build.sh  svpn-client.c  svpn-client.conf  svpn-client.pro  svpn_client.c  svpn_client.conf  svpn_client.pro
server/: build.sh  svpn-server.conf  svpn-server.pro  svpn_server.c  svpn_server.conf  svpn_server.pro
src/: svpn_client.c  svpn_common.c  svpn_defs.h  svpn_server.c  svpn_util.c
util/: build.sh  svpn_util.c  svpn_util.pro
